[gd_scene load_steps=7 format=3 uid="uid://hb7xi8e15pp6"]

[ext_resource type="Script" uid="uid://d1a0ocdj6famc" path="res://scripts/slimes/slime_mud.gd" id="1_mesks"]
[ext_resource type="PackedScene" uid="uid://ctf1o4yv5fkvd" path="res://scenes/slimes/Dirt.tscn" id="2_yqygu"]
[ext_resource type="PackedScene" path="res://scenes/slimes/alerted_indicator.tscn" id="3_yqygu"]

[sub_resource type="SphereShape3D" id="SphereShape3D_6nu0y"]
resource_local_to_scene = true
radius = 0.63

[sub_resource type="SphereShape3D" id="SphereShape3D_22mvs"]
radius = 13.0

[sub_resource type="SphereShape3D" id="SphereShape3D_mesks"]
resource_local_to_scene = true
radius = 1.0

[node name="SlimeMud" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_mesks")
slime_type = 9
split_type = 1

[node name="CollisionShape" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0746541, 0.495757, 0.16989)
shape = SubResource("SphereShape3D_6nu0y")
debug_color = Color(0.787219, 0.410982, 0.360379, 0.42)

[node name="Pivot" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="SlimeModel" parent="Pivot" instance=ExtResource("2_yqygu")]
unique_name_in_owner = true

[node name="FlockingZone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 0
collision_mask = 2

[node name="FlockingZoneCollisionShape" type="CollisionShape3D" parent="FlockingZone"]
unique_name_in_owner = true
shape = SubResource("SphereShape3D_22mvs")

[node name="UpdateAmbientDirectionTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="TouchZone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 0
collision_mask = 2

[node name="TouchCollisionShape3D" type="CollisionShape3D" parent="TouchZone"]
unique_name_in_owner = true
shape = SubResource("SphereShape3D_mesks")

[node name="AlertedIndicator" parent="." instance=ExtResource("3_yqygu")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75984, 0)

[connection signal="body_entered" from="FlockingZone" to="." method="_on_flocking_zone_body_entered"]
[connection signal="body_exited" from="FlockingZone" to="." method="_on_flocking_zone_body_exited"]
[connection signal="timeout" from="UpdateAmbientDirectionTimer" to="." method="_on_update_ambient_direction_timer_timeout"]
